test/types/range/elliot/badRangeLiterals/badBoundedRange.good
badBoundedRange.chpl:3: error: Ranges defined using bounds of type 'real(64)' are not currently supported
